// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.sorter renders sorter icon correctly 1`] = `
<thead
  class="ant-table-thead"
>
  <tr>
    <th
      class="ant-table-cell ant-table-column-has-sorters"
    >
      <div
        class="ant-table-column-sorters"
      >
        <span
          class="ant-table-column-title"
        >
          Name
        </span>
        <span
          class="ant-table-column-sorter ant-table-column-sorter-full"
        >
          <span
            class="ant-table-column-sorter-inner"
          >
            <span
              aria-label="caret-up"
              class="anticon anticon-caret-up ant-table-column-sorter-up"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="caret-up"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                />
              </svg>
            </span>
            <span
              aria-label="caret-down"
              class="anticon anticon-caret-down ant-table-column-sorter-down"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="caret-down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`Table.sorter should support defaultOrder in Column 1`] = `
<div
  class="ant-table-wrapper osui-table"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-column-sort ant-table-column-has-sorters"
                  >
                    <div
                      class="ant-table-column-sorters"
                    >
                      <span
                        class="ant-table-column-title"
                      >
                        Age
                      </span>
                      <span
                        class="ant-table-column-sorter ant-table-column-sorter-full"
                      >
                        <span
                          class="ant-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            class="anticon anticon-caret-up ant-table-column-sorter-up active"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            class="anticon anticon-caret-down ant-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-column-sort"
                  >
                    1
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right ant-table-pagination ant-table-pagination-right osui-pagination"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M768 798.255L460.8 512 768 225.745 665.6 128 256 512l409.6 384z"
              fill="currentColor"
            />
          </svg>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
              fill="currentColor"
            />
          </svg>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
